<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TodoDetailFragment"
    android:background="@color/mainBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="393dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="18dp">

            <ImageButton
                android:id="@+id/detailsBackBtn"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:alpha="0.5"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/back" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:alpha="0.5"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/more"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_marginTop="18dp">

            <EditText
                android:id="@+id/detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/detailTitle"
                android:textSize="27dp"
                android:background="@android:color/transparent"
                android:textColor="@color/detailDefaultColor"/>

            <EditText
                android:id="@+id/detailDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/detailDateExample"
                android:textSize="12dp"
                android:layout_marginTop="19dp"
                android:background="@android:color/transparent"
                android:textColor="@color/detailDefaultColor"/>

            <LinearLayout
                android:layout_width="393dp"
                android:layout_height="2dp"
                android:background="@color/grey"
                android:layout_marginTop="28dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/startTyping"
                android:background="@android:color/transparent"
                android:textSize="14dp"
                android:layout_marginTop="19dp"
                android:textColor="@color/detailDefaultColor"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>